login register fully functional for customer
