# src/Api/models/index.ts
@@ -45,7 +45,6 @@ export * from './result-seller';
 export * from './result-seller-report';
 export * from './result-string';
 export * from './result-user';
-export * from './result-verification-code-req';
 export * from './result-void';
 export * from './result-wishlist';
 export * from './review';
@@ -59,5 +58,4 @@ export * from './transaction';
 export * from './user';
 export * from './user-update-req-dto';
 export * from './verification-code';
-export * from './verification-code-req';
 export * from './wishlist';
