# src/Api/models/result-verification-code-req.ts
@@ -1,51 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * OpenAPI definition
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: v0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-// May contain unused imports in some cases
-// @ts-ignore
-import type { VerificationCodeReq } from './verification-code-req';
-
-/**
- * 
- * @export
- * @interface ResultVerificationCodeReq
- */
-export interface ResultVerificationCodeReq {
-    /**
-     * 
-     * @type {boolean}
-     * @memberof ResultVerificationCodeReq
-     */
-    'success'?: boolean;
-    /**
-     * 
-     * @type {number}
-     * @memberof ResultVerificationCodeReq
-     */
-    'code'?: number;
-    /**
-     * 
-     * @type {string}
-     * @memberof ResultVerificationCodeReq
-     */
-    'message'?: string;
-    /**
-     * 
-     * @type {VerificationCodeReq}
-     * @memberof ResultVerificationCodeReq
-     */
-    'data'?: VerificationCodeReq;
-}
-
