# src/Api/models/verification-code-req.ts
@@ -1,30 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * OpenAPI definition
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: v0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-
-/**
- * 
- * @export
- * @interface VerificationCodeReq
- */
-export interface VerificationCodeReq {
-    /**
-     * 
-     * @type {string}
-     * @memberof VerificationCodeReq
-     */
-    'email': string;
-}
-
